@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: masterdump.c,v 1.56.2.5.2.10 2004/03/08 09:04:30 marka Exp $ */
+/* $Id: masterdump.c,v 1.56.2.5.2.11 2004/05/14 01:18:10 marka Exp $ */
 
 #include <config.h>
 
@@ -979,6 +979,7 @@ closeandrename(FILE *f, isc_result_t result, const char *temp, const char *file)
 static void
 dump_quantum(isc_task_t *task, isc_event_t *event) {
 	isc_result_t result;
+	isc_result_t tresult;
 	dns_dumpctx_t *dctx;
 
 	REQUIRE(event != NULL);
@@ -994,11 +995,12 @@ dump_quantum(isc_task_t *task, isc_event_t *event) {
 		return;
 	}
 
-	if (dctx->file != NULL)
-		result = closeandrename(dctx->f, result,
-					dctx->tmpfile, dctx->file);
-	if (dctx->version != NULL)
-		dns_db_closeversion(dctx->db, &dctx->version, ISC_FALSE);
+	if (dctx->file != NULL) {
+		tresult = closeandrename(dctx->f, result,
+					 dctx->tmpfile, dctx->file);
+		if (tresult != ISC_R_SUCCESS && result == ISC_R_SUCCESS)
+			result = tresult;
+	}
 	(dctx->done)(dctx->done_arg, result);
 	isc_event_free(&event);
 	dns_dumpctx_detach(&dctx);
