@@ -1,5 +1,9 @@
 1637.	[bug]		Node reference leak on error in addnoqname().
 
+1636.	[bug]		The dump done callback could get ISC_R_SUCCESS even if
+			a error had occured.  The database version no longer
+			matched the version of the database that was dumped.
+
 1635.	[bug]		Memory leak on error in query_addds().
 
 1633.	[bug]		named should return NOTIMP to update requests to a
